src/objects/Car_Experience__c.object
<CustomObject>
    <fields>
        <fullName>Car__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>CarExperiences</relationshipLabel>
        <relationshipName>CarExperiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Car Experience</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CarExperiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>